# RobotVideoSummary_ServerSide

./: .ShowYOLOv3FailureCases.py.swp  .gitignore  11_offline_test.cpp  11_offline_test.hpp  8_openvino.cpp  8_openvino.hpp  CMakeLists.txt  Pose.cpp  Pose.hpp  PoseSensitiveEmbedding.cpp  PoseSensitiveEmbedding.hpp  ProcessImage.cpp  ProcessImage.hpp  ProcessImage_tensorflow.cpp  README.md  ReID.cpp  ReID.hpp  Remove_redundant_images.py  ShowYOLOv3FailureCases.py  SocketToServer.cpp  SocketToServer.hpp  SplitData.py  Tensor.cpp  Tensor.hpp  TensorMatConversion.cpp  TensorMatConversion.hpp  UseYOLOv3ToLabelImages.py  code_for_tensorflow.txt  code_for_tracker.txt  dump_features.sh  main.cpp  object_detection_demo_yolov3_async.hpp  offline_test.sh  render_images_crop_regions.sh  run_server_side_program.sh  server_side_no_reid.sh  test_offline.sh  utility_compute.cpp  utility_compute.hpp  utility_csv.hpp  (+3 more)
LePi/: CMakeLists.txt  README.md
LePi/app/: CMakeLists.txt
LePi/app/LePiClient/: CMakeLists.txt  LePiClient.cpp  LePiClient.hpp
LePi/cmake/: third-party.cmake
LePi/lib/: CMakeLists.txt
LePi/lib/leptonSDKEmb32PUB/src/: raspi_I2C.c
LePi/lib/utils/: CMakeLists.txt
Python/: Check_corrupt_images_in_a_directory.py  Merge_csv_files.py  Remove_zero_width_images.py
cpp/: 8_openvino.cpp  8_openvino.hpp  9_Test.cpp  AnalyzedResults.proto  CMakeLists(9_Test).txt  CMakeLists.txt  CheckLabelsAndRawImages.py  JPEG.cpp  JPEG.hpp  Logger.hpp  Pose.cpp  Pose.hpp  ProcessImage.cpp  ProcessImage.hpp  README.md  ReID.hpp  Remove_corrupt_images.py  RetroAssignLabelsFromDirectories.py  SocketToServer.cpp  SocketToServer.hpp  Tensor.cpp  build_demo.sh  human_pose_estimator.cpp  human_pose_estimator.hpp  main.cpp  run_OpenVino_demo.sh  run_server_side_program.sh  utility_TimeRecorder.cpp  utility_TimeRecorder.hpp  utility_compute.cpp  utility_csv.cpp  utility_directory.cpp  utility_string.cpp  utility_string.hpp
cpp/include/: human_pose_estimator.hpp  peak.hpp
cpp/src/: human_pose_estimator.cpp  peak.cpp
include/: ProcessImage.hpp  human_pose_estimator.hpp
shellscripts/: dump_features.sh  flir.sh  render_images_crop_regions.sh  render_images_crop_regions_ShuffleNet.sh  server_side_flir.sh
src/: human_pose_estimator.cpp
